2007-09-25  Johannes Schmid <jhs@gnome.org>

	* configure.in:
	Add GNOME_WARNING_FLAGS(maximum) and
	GNOME_CXX_WARNIGS(yes) to avoid bugs
	the compiler can warn you.
	
	* libegg/test-tree-utils.c: (key_test):
	* plugins/file-manager/file-model.c:
	(file_model_cancel_expand_idle), (file_model_sort),
	(file_model_row_expanded):
	* plugins/file-manager/file-view.c: (file_view_cancel_refresh),
	(file_view_refresh), (file_view_get_selected), (file_view_init),
	(file_view_new):
	* plugins/file-manager/file-view.h:
	* plugins/symbol-db/readtags.c: (initialize_1):
	* src/main.c:
	
	Fixed the more critical warnings

2007-09-25  Naba Kumar  <naba.kumar@gnome.org>

	Icons from tpgww@onepost.net:
	* configure.in:
	* plugins/debug-manager/Makefile.am:
	* plugins/debug-manager/images/Makefile.am:
	* plugins/debug-manager/images/anjuta-attach.svg:
	* plugins/debug-manager/images/anjuta-run-to-cursor.svg:
	* plugins/debug-manager/images/anjuta-step-into.svg:
	* plugins/debug-manager/images/anjuta-step-out.svg:
	* plugins/debug-manager/images/anjuta-step-over.svg:
	* plugins/debug-manager/plugin.c: (register_stock_icons):
	* plugins/document-manager/Makefile.am:
	* plugins/document-manager/block_select.xpm:
	* plugins/document-manager/fold_close.xpm:
	* plugins/document-manager/fold_open.xpm:
	* plugins/document-manager/fold_toggle.xpm:
	* plugins/document-manager/images/Makefile.am:
	* plugins/document-manager/images/anjuta-block-end.svg:
	* plugins/document-manager/images/anjuta-block-start.svg:
	* plugins/document-manager/images/anjuta-bookmark-clear.svg:
	* plugins/document-manager/images/anjuta-bookmark-first.svg:
	* plugins/document-manager/images/anjuta-bookmark-last.svg:
	* plugins/document-manager/images/anjuta-bookmark-next.svg:
	* plugins/document-manager/images/anjuta-bookmark-prev.svg:
	* plugins/document-manager/images/anjuta-bookmark-toggle.svg:
	* plugins/document-manager/indent.xpm:
	* plugins/document-manager/indent_auto.xpm: